<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_screen">

    <Button
        android:id="@+id/oxygen"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="425dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/oxygen"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hydrogen"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/hydrogen"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nitrogen"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="496dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/nitrogen"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sulphur"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="633dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/sulphur"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zinc"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="567dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/zinc"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/carbon"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="633dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/carbon"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/iron"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="567dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/iron"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sodium"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#D8D8D8"
        android:text="@string/sodium"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/elementText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/elementText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/elementTextAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clearBtn"
        android:layout_width="257dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="335dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ac_btn" />

    <ImageView
        android:id="@+id/equalBtn"
        android:layout_width="77dp"
        android:layout_height="400dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/chemical_solution_equal_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>